--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <header>
-    </header>
+
 </body>
 </html>
