--- a/index.html
+++ b/index.html
@@ -4,8 +4,73 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/js/main.js">
 </head>
 <body>
+    <header>
+        <div class="container menu">
+            <h2><img src="src/img/ligo.png" alt="logo"></h2>
+            <nav>
+                <ul class="menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+
+            </nav>
+        </div>
+
+        <div class="container">
+            <h1>Alecto is simple PSD Template</h1>
+            <h3>Nam varius accumsan elementum aliquam</h3>
+            <div class="link">
+                <span>Learn more</span>
+            </div>
+
+            <ul class="slider">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+
+            <div class="arrow"></div>
+
+        </div>
+
+
+
+    </header>
+
+    <section class="about-us">
+        <div class="container">
+            <h2>About us</h2>
+            <div class="border"></div>
+            <h3>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
+            <ul>
+                <li>
+                    <div class="circle"></div>
+                    <span class="name"></span>
+                    <span class="description"></span></li>
+                <li>
+                    <div class="circle"></div>
+                    <span class="name"></span>
+                    <span class="description"></span></li>
+                <li>
+                    <div class="circle"></div>
+                    <span class="name"></span>
+                    <span class="description"></span></li>
+                <li>
+                    <div class="circle"></div>
+                    <span class="name"></span>
+                    <span class="description"></span></li>
+            </ul>
+        </div>
+    </section>
+
 
 </body>
 </html>
