Add header style

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Alecto</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/js/main.js">
 </head>
@@ -22,11 +22,13 @@
             </nav>
         </div>
 
-        <div class="container">
+        <div class="container headline">
             <h1>Alecto is simple PSD Template</h1>
+            <div class="arrow-right"></div>
+            <div class="arrow-left"></div>
             <h3>Nam varius accumsan elementum aliquam</h3>
-            <div class="link">
-                <span>Learn more</span>
+            <div class="link feature">
+                <a href="#">Learn more</a>
             </div>
 
             <ul class="slider">
@@ -37,9 +39,10 @@
                 <li></li>
             </ul>
 
-            <div class="arrow"></div>
 
+            <div class="arrow-center"></div>
         </div>
+
 
 
 
@@ -53,21 +56,185 @@
             <ul>
                 <li>
                     <div class="circle"></div>
-                    <span class="name"></span>
-                    <span class="description"></span></li>
+                    <span class="name">Lorem ipsum</span>
+                    <span class="description">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
+                        scelerisque.</span>
+                </li>
+
                 <li>
                     <div class="circle"></div>
-                    <span class="name"></span>
-                    <span class="description"></span></li>
+                    <span class="name">Lorem ipsum</span>
+                    <span class="description">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
+                        scelerisque.</span>
+                </li>
+
                 <li>
                     <div class="circle"></div>
-                    <span class="name"></span>
-                    <span class="description"></span></li>
+                    <span class="name">Lorem ipsum</span>
+                    <span class="description">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
+                        scelerisque.</span>
+                </li>
+
                 <li>
                     <div class="circle"></div>
-                    <span class="name"></span>
-                    <span class="description"></span></li>
+                    <span class="name">Lorem ipsum</span>
+                    <span class="description">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
+                        scelerisque.</span>
+                </li>
+
             </ul>
+
+            <div class="link">
+                <a href="#">Learn more</a>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="lorem-grey">
+        <div class="container">
+            <div class="div">
+                <h2>Lorem ipsum</h2>
+                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. </span>
+                <div class="link">
+                    <a href="#">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="dolor-sit">
+        <div class="container">
+            <div class="div">
+                <h2>Dolor sit amet</h2>
+                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. </span>
+                <div class="link">
+                    <a href="#">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="founder-info">
+        <div class="container">
+            <img src="assets/img/Photo_Adam_Czajkowski.png" alt="Adam">
+            <h2>Alecto lorem ipsum dolor sit amet, consectetur adipiscing elit. </h2>
+            <h3>Adam Czajkowski, CEO&Founder at symu.co</h3>
+            <ul class="slider">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="our-services">
+        <div class="container">
+            <h2>Our Services</h2>
+            <div class="border"></div>
+            <h3>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
+
+            <ul>
+                <li>
+                    <div class="service-logo"></div>
+                    <div class="service-description">
+                        <h3>Portfolio</h3>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est
+                            porttitor, ac blandit nisl posuere.
+                        </span>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="service-logo"></div>
+                    <div class="service-description">
+                        <h3>Design</h3>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est
+                            porttitor, ac blandit nisl posuere.
+                        </span>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="service-logo"></div>
+                    <div class="service-description">
+                        <h3>Branding</h3>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est
+                            porttitor, ac blandit nisl posuere.
+                        </span>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="service-logo"></div>
+                    <div class="service-description">
+                        <h3>Development</h3>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est
+                            porttitor, ac blandit nisl posuere.
+                        </span>
+                    </div>
+                </li>
+
+            </ul>
+
+        </div>
+    </section>
+    <section class="team">
+        <div class="container">
+            <h2>Meet our team</h2>
+            <div class="border"></div>
+            <h3>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
+
+        </div>
+    </section>
+
+    <section class="pricing">
+        <div class="container">
+            <h2>Pricing</h2>
+            <div class="border"></div>
+            <h3>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
+
+            <ul>
+                <li>
+                    <h4>$29</h4>
+                    <span>Lorem ipsum license</span>
+                    <span>Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
+                        efficitur lactus</span>
+                    <div class="purchase">
+                        <span>p u r c h a s e</span>
+                    </div>
+                </li>
+                <li>
+                    <h4>$39</h4>
+                    <span>Lorem ipsum license</span>
+                    <span>Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
+                        efficitur lactus</span>
+                    <div class="purchase">
+                        <span>p u r c h a s e</span>
+                    </div>
+                </li>
+                <li>
+                    <h4>$49</h4>
+                    <span>Lorem ipsum license</span>
+                    <span>Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
+                        efficitur lactus</span>
+                    <div class="purchase">
+                        <span>p u r c h a s e</span>
+                    </div>
+                </li>
+                <li>
+                    <h4>$109</h4>
+                    <span>Lorem ipsum license</span>
+                    <span>Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
+                        efficitur lactus</span>
+                    <div class="purchase">
+                        <span>p u r c h a s e</span>
+                    </div>
+                </li>
+            </ul>
+
         </div>
     </section>
 
