Add 4 sections + styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Alecto</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/js/main.js">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,7 +20,6 @@
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Blog</a></li>
                 </ul>
-
             </nav>
         </div>
 
@@ -27,7 +28,7 @@
             <div class="arrow-right"></div>
             <div class="arrow-left"></div>
             <h3>Nam varius accumsan elementum aliquam</h3>
-            <div class="link feature">
+            <div class="link feature center">
                 <a href="#">Learn more</a>
             </div>
 
@@ -44,8 +45,6 @@
         </div>
 
 
-
-
     </header>
 
     <section class="about-us">
@@ -53,38 +52,38 @@
             <h2>About us</h2>
             <div class="border"></div>
             <h3>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
-            <ul>
+            <ul class="services">
                 <li>
                     <div class="circle"></div>
                     <span class="name">Lorem ipsum</span>
-                    <span class="description">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
+                    <span class="description center">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
                         scelerisque.</span>
                 </li>
 
                 <li>
                     <div class="circle"></div>
                     <span class="name">Lorem ipsum</span>
-                    <span class="description">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
+                    <span class="description center">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
                         scelerisque.</span>
                 </li>
 
                 <li>
                     <div class="circle"></div>
                     <span class="name">Lorem ipsum</span>
-                    <span class="description">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
+                    <span class="description center">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
                         scelerisque.</span>
                 </li>
 
                 <li>
                     <div class="circle"></div>
                     <span class="name">Lorem ipsum</span>
-                    <span class="description">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
+                    <span class="description center">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
                         scelerisque.</span>
                 </li>
 
             </ul>
 
-            <div class="link">
+            <div class="link center">
                 <a href="#">Learn more</a>
             </div>
 
@@ -93,9 +92,9 @@
 
     <section class="lorem-grey">
         <div class="container">
-            <div class="div">
+            <div class="div right">
                 <h2>Lorem ipsum</h2>
-                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. </span>
+                <span class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. </span>
                 <div class="link">
                     <a href="#">Learn more</a>
                 </div>
@@ -107,7 +106,7 @@
         <div class="container">
             <div class="div">
                 <h2>Dolor sit amet</h2>
-                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. </span>
+                <span class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. </span>
                 <div class="link">
                     <a href="#">Learn more</a>
                 </div>
