Add last section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section class="about-us">
         <div class="container">
-            <h2>About us</h2>
+            <h2 class="center">About us</h2>
             <div class="border"></div>
             <h3>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
             <ul class="services">
@@ -116,7 +116,7 @@
 
     <section class="founder-info">
         <div class="container">
-            <img src="assets/img/Photo_Adam_Czajkowski.png" alt="Adam">
+            <img class="center" src="assets/img/Photo_Adam_Czajkowski.png" alt="Adam">
             <h2>Alecto lorem ipsum dolor sit amet, consectetur adipiscing elit. </h2>
             <h3>Adam Czajkowski, CEO&Founder at symu.co</h3>
             <ul class="slider">
@@ -131,15 +131,15 @@
 
     <section class="our-services">
         <div class="container">
-            <h2>Our Services</h2>
+            <h2 class="center">Our Services</h2>
             <div class="border"></div>
             <h3>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
 
             <ul>
                 <li>
-                    <div class="service-logo"></div>
+                    <div class="service-logo bag"></div>
                     <div class="service-description">
-                        <h3>Portfolio</h3>
+                        <h4>Portfolio</h4>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est
                             porttitor, ac blandit nisl posuere.
                         </span>
@@ -147,9 +147,22 @@
                 </li>
 
                 <li>
-                    <div class="service-logo"></div>
+                    <div class="service-logo pen"></div>
                     <div class="service-description">
-                        <h3>Design</h3>
+                        <h4>Design</h4>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est
+                            porttitor, ac blandit nisl posuere.
+                        </span>
+                    </div>
+                </li>
+            </ul>
+
+            <ul>
+
+                <li>
+                    <div class="service-logo square"></div>
+                    <div class="service-description">
+                        <h4>Branding</h4>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est
                             porttitor, ac blandit nisl posuere.
                         </span>
@@ -157,19 +170,9 @@
                 </li>
 
                 <li>
-                    <div class="service-logo"></div>
+                    <div class="service-logo rocket"></div>
                     <div class="service-description">
-                        <h3>Branding</h3>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est
-                            porttitor, ac blandit nisl posuere.
-                        </span>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="service-logo"></div>
-                    <div class="service-description">
-                        <h3>Development</h3>
+                        <h4>Development</h4>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est
                             porttitor, ac blandit nisl posuere.
                         </span>
@@ -180,53 +183,92 @@
 
         </div>
     </section>
+
     <section class="team">
-        <div class="container">
+        <div class="container width">
+
             <h2>Meet our team</h2>
             <div class="border"></div>
-            <h3>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
+            <h3 class="description center">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
 
+            <ul class="team-photo">
+                <li>
+                    <span>John Doe</span>
+                </li>
+                 <li>
+                    <span>John Doe</span>
+                </li>
+                 <li>
+                    <span>John Doe</span>
+                </li>
+                 <li>
+                    <span>John Doe</span>
+                </li>
+                 <li>
+                    <span>John Doe</span>
+                </li>
+                 <li>
+                    <span>John Doe</span>
+                </li>
+                 <li>
+                    <span>John Doe</span>
+                </li>
+                 <li>
+                    <span>John Doe</span>
+                </li>
+                 <li>
+                    <span>John Doe</span>
+                </li>
+                 <li>
+                    <span>John Doe</span>
+                </li>
+
+            </ul>
         </div>
     </section>
 
     <section class="pricing">
         <div class="container">
-            <h2>Pricing</h2>
+            <h2 class="center">Pricing</h2>
             <div class="border"></div>
-            <h3>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
+            <h3 class="description center">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
 
-            <ul>
+            <ul class="price">
                 <li>
-                    <h4>$29</h4>
-                    <span>Lorem ipsum license</span>
-                    <span>Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
+                    <h2>$29</h2>
+                    <span class="description">Lorem ipsum license</span>
+                    <div class="line"></div>
+                    <span class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
                         efficitur lactus</span>
                     <div class="purchase">
                         <span>p u r c h a s e</span>
                     </div>
                 </li>
                 <li>
-                    <h4>$39</h4>
-                    <span>Lorem ipsum license</span>
-                    <span>Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
+                    <h2>$39</h2>
+                    <span class="description">Lorem ipsum license</span>
+                    <div class="line"></div>
+                    <span class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
                         efficitur lactus</span>
                     <div class="purchase">
                         <span>p u r c h a s e</span>
                     </div>
                 </li>
                 <li>
-                    <h4>$49</h4>
-                    <span>Lorem ipsum license</span>
-                    <span>Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
+                    <h2>$49</h2>
+                    <span class="description">Lorem ipsum license</span>
+                    <div class="line"></div>
+                    <span class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
                         efficitur lactus</span>
                     <div class="purchase">
                         <span>p u r c h a s e</span>
                     </div>
                 </li>
                 <li>
-                    <h4>$109</h4>
-                    <span>Lorem ipsum license</span>
-                    <span>Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
+                    <h2>$109</h2>
+                    <span class="description">Lorem ipsum license</span>
+                    <div class="line"></div>
+                    <span class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
                         efficitur lactus</span>
                     <div class="purchase">
                         <span>p u r c h a s e</span>
@@ -236,6 +278,32 @@
 
         </div>
     </section>
+
+    <section class="map">
+        <div class="container">
+            <div class="div">
+                <h2>Dolor sit amet</h2>
+                <span class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. </span>
+                <div class="link">
+                    <a href="#">Learn more</a>
+                </div>
+            </div>
+            <img src="assets/img/map.png" alt="map">
+        </div>
+    </section>
+
+    <section class="try-template">
+        <h2>Try our PSD template on symu.co</h2>
+        <div class="link">
+            <a href="#">symu.co/freebies</a>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+
+        </div>
+    </footer>
 
 
 </body>
