Not finished work

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <h2><img src="src/img/ligo.png" alt="logo"></h2>
             <nav>
                 <ul class="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Work</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a class="click" href="#">Home</a></li>
+                    <li><a class="click" href="#">About</a></li>
+                    <li><a class="click" href="#">Work</a></li>
+                    <li><a class="click" href="#">Services</a></li>
+                    <li><a class="click" href="#">Blog</a></li>
                 </ul>
             </nav>
         </div>
@@ -301,6 +301,19 @@
 
     <footer>
         <div class="container">
+            <div class="rights">
+               <img src="assets/img/Vector_Smart_Object.png" alt="vector-logo">
+                <span>All Rights Reserved by Alecto</span>
+            </div>
+            <nav>
+                <ul class="menu">
+                    <li><a class="click" href="#">Home</a></li>
+                    <li><a class="click" href="#">About</a></li>
+                    <li><a class="click" href="#">Work</a></li>
+                    <li><a class="click" href="#">Services</a></li>
+                    <li><a class="click" href="#">Blog</a></li>
+                </ul>
+            </nav>
 
         </div>
     </footer>
